# komodo

./: .env.dockerfile  .env.nu  .gitignore  .gitlab-ci.dockerfile  .gitlab-ci.yml  .nu.cfg  CITATION.cff  Cargo.toml  LICENSE  Makefile  README.md  binary.nu  codemeta.json  katex.html  komodo.nu  log.nu  make.rs  nob.rs  paper.bib  paper.md  regex.nu  rust-toolchain.toml
.github/workflows/: ci.yml  draft-pdf.yml
.nushell/: binary.nu  color.nu  error.nu  fs.nu  mod.nu  parse.nu  plot.nu
assets/: bin_with_holes
benches/: README.md  commit.rs  linalg.rs  plot.py  recoding.rs  setup.rs
benches/operations/: curve_group.rs  field.rs
benchmarks/: Cargo.toml  README.md  TODO.md  aplonk.csv  ffmpeg.nu  fri.csv  heat_map.py  imshow.py  kzg.csv  make.nu  mod.nu  plot.nu  run.nu  semi-avid.csv
benchmarks/.nushell/commit/: plot.nu  run.nu
benchmarks/.nushell/fec/: plot.nu  run.nu
benchmarks/.nushell/recoding/: plot.nu  run.nu
benchmarks/.nushell/setup/: plot.nu  run.nu
benchmarks/nu-lib/: commit.nu  linalg.nu  recoding.nu  setup.nu
benchmarks/nu-lib/fec/: mod.nu  plot.nu  run.nu
benchmarks/nu-lib/fri/: plot.nu  run.nu
benchmarks/nu-lib/utils/: args.nu  log.nu  mod.nu  plot.nu
benchmarks/params/: fri.nu
benchmarks/src/: aplonk.rs  conversions.rs  curves.rs  fields.rs  fri.rs  kzg.rs  macros.rs  main.rs  pretty.rs  random.rs  semi_avid.rs
benchmarks/src/benches/: aplonk.rs  commit.rs  curve_group.rs  fec.rs  field.rs  kzg.rs  linalg.rs  mod.rs  recoding.rs  semi_avid.rs  setup.rs
bins/: README.md  cargo.nu
bins/curves/: Cargo.toml  README.md
bins/curves/src/: main.rs
bins/inbreeding/: Cargo.toml  README.md  build.nu  consts.nu  inspect.nu  list.nu  load.nu  mod.nu  parse.nu  path.nu  plot.nu  run.nu  watch.nu
bins/inbreeding/scripts/: plot.nu  run.nu  show.nu
bins/inbreeding/src/: environment.rs  main.rs  random.rs  strategy.rs
bins/inbreeding/src/.nushell/: consts.nu  load.nu  plot.nu  run.nu
bins/rank/: Cargo.toml
bins/rank/src/: main.rs
bins/rng/: Cargo.toml
bins/rng/src/: main.rs
bins/saclin/: Cargo.toml  README.md  binary.nu  mod.nu
bins/saclin/examples/: cli.nu
bins/saclin/src/: main.rs
bins/saclin/tests/: binary.nu  cli.nu
examples/: README.md  aplonk.rs  bench_setup_size.rs  cli.nu  curves.rs  fec.rs  fri.rs  inbreeding.rs  kzg.rs  rank.rs  semi_avid.rs  trait.rs
examples/benches/: README.md  commit.rs  fec.rs  linalg.rs  recoding.rs  setup.rs  setup_size.rs
examples/benches/operations/: curve_group.rs  field.rs
examples/inbreeding/: environment.rs  mod.rs  strategy.rs
examples/utils/: time.rs
nu-utils/: cargo.nu  color.nu  error.nu  mod.nu
scripts/: check-lock-file.sh  check-mirror.nu  check-nushell-files.nu  check-nushell-version.nu  color.nu  formats.nu  get-arkworks-curves.nu  get-mirror-pipelines.nu  math.nu  plot.nu  set-mirror.nu  update-registry-revision.sh  venv.nu
scripts/commit/: plot.nu  run.nu
scripts/fec/: plot.nu  run.nu
scripts/inbreeding/: build.nu  options.nu  plot.nu  run.nu
scripts/plot/: bench_commit.py  benches.py  multi_bar.py  plot.py
scripts/recoding/: plot.nu  run.nu
scripts/setup/: plot.nu  run.nu
src/: algebra.rs  conversions.rs  error.rs  fec.mmd  fec.rs  field.rs  fri.rs  fs.rs  kzg.mmd  kzg.rs  lib.mmd  lib.rs  linalg.rs  main.rs  semi_avid.mmd  semi_avid.rs  setup.rs  zk.rs
src/algebra/: linalg.rs  mod.rs
src/aplonk/: ipa.rs  mod.mmd  mod.rs  polynomial.rs  transcript.rs
tests/: binary.nu  cli.nu  color.nu
