[package]
name = "komodo"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-poly = "0.4.2"
ark-serialize = "0.4.2"
ark-std = "0.4.0"
rs_merkle = "1.4.1"
thiserror = "1.0.50"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
# `main.rs` dependencies
ark-bls12-381 = "0.4.0"
rand = "0.8.5"

[workspace]
members = [
    "benchmarks",
    "bins/rank",
]

[dev-dependencies]
itertools = "0.13.0"
