[package]
name = "komodo"
version = "1.0.1"
edition = "2021"
description = "Komodo: cryptographically-proven erasure coding for distributed systems"
repository = "https://gitlab.isae-supaero.fr/dragoon/komodo"
readme = "README.md"
license = "MIT"
authors = [
    "Antoine Stevan <antoine.stevan@isae-supaero.fr>",
    "Jonathan Detchart <jonathan.detchart@isae-supaero.fr>",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-poly = "0.4.2"
ark-serialize = "0.4.2"
ark-std = "0.4.0"
rs_merkle = "1.4.1"
thiserror = "1.0.50"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
ark-poly-commit = { git = "https://gitlab.isae-supaero.fr/a.stevan/poly-commit", version = "0.4.0", rev = "19fc0d4", optional = true }

[workspace]
members = [
    "benchmarks",
    "bins/rank",
]

[dev-dependencies]
ark-bls12-381 = "0.4.0"
itertools = "0.13.0"
rand = "0.8.5"

[features]
kzg = ["dep:ark-poly-commit"]
aplonk = ["dep:ark-poly-commit"]
fs = []

[package.metadata.docs.rs]
features = ["kzg", "aplonk"]
rustdoc-args = [ "--html-in-header", "katex.html" ]

[[example]]
name = "kzg"
required-features = ["kzg"]

[[example]]
name = "aplonk"
required-features = ["aplonk"]
