[package]
name = "benchmarks"
version = "1.0.1"
edition = "2021"

[dependencies]
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-poly = "0.4.0"
ark-poly-commit = { git = "https://gitlab.isae-supaero.fr/a.stevan/poly-commit", version = "0.4.0", rev = "19fc0d4" }
ark-serialize = "0.4.0"
ark-std = "0.4.0"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.0.0"
convert_case = "0.8.0"
dragoonfri = { version = "0.1.0"}
hex = "0.4.3"
indicatif = "0.17.11"
itertools = "0.14.0"
komodo = { path = "..", features = ["kzg", "aplonk", "fri"] }
plnk = { git = "https://gitlab.isae-supaero.fr/a.stevan/plnk", rev = "6768cb5b49c272f2f39e11497bd88800c93388f3" }
rand = "0.8.5"
size = "0.5.0"

# elliptic curves
ark-bls12-381 = "0.4.0"
ark-bn254 = "0.4.0"
ark-cp6-782 = "0.4.0"
ark-ed-on-mnt4-298 = "0.4.0"
ark-mnt4-753 = "0.4.0"
ark-pallas = "0.4.0"
ark-secp256k1 = "0.4.0"
ark-secp256r1 = "0.4.0"
ark-vesta = "0.4.0"
