[package]
name = "benchmarks"
version = "1.1.0"
edition = "2021"

[dependencies]
ark-bls12-381 = "0.4.0"
ark-bn254 = "0.4.0"
ark-cp6-782 = "0.4.0"
ark-ec = "0.4.2"
ark-ed-on-mnt4-298 = "0.4.0"
ark-ff = "0.4.2"
ark-mnt4-753 = "0.4.0"
ark-pallas = "0.4.0"
ark-poly = "0.4.0"
ark-poly-commit = "0.4.0"
ark-serialize = "0.4.0"
ark-secp256k1 = "0.4.0"
ark-secp256r1 = "0.4.0"
ark-std = "0.4.0"
ark-vesta = "0.4.0"
clap = { version = "4.5.4", features = ["derive"] }
komodo = { path = ".." }
plnk = { git = "https://gitlab.isae-supaero.fr/a.stevan/plnk", tag = "0.7.0", version = "0.7.0" }
rand = "0.8.5"
