[package]
name = "benchmarks"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ec        = "0.4.2"
ark-ff        = "0.4.2"
ark-poly      = "0.4.2"
ark-serialize = "0.4.2"
ark-std       = "0.4.0"

clap = { version = "4.5.4", features = ["derive"] }
indicatif = "0.17.11"
rand = "0.8.5"
rs_merkle = "1.4.1"
hex = "0.4.3"

komodo = { path = "..", features = ["kzg", "aplonk", "fri"] }
plnk   = { git = "https://gitlab.isae-supaero.fr/a.stevan/plnk", rev = "6768cb5b49c272f2f39e11497bd88800c93388f3" }
dragoonfri = "0.1.0"
ark-poly-commit = { git = "https://gitlab.isae-supaero.fr/a.stevan/poly-commit", version = "0.4.0", rev = "19fc0d4" }

ark-bls12-381 = "0.4.0"
ark-bn254     = "0.4.0"
