[package]
name = "curves"
version = "0.1.0"
edition = "2021"
description = "Explore Arkworks elliptic curves."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bls12-377 = "0.4.0"
ark-bls12-381 = "0.4.0"
ark-bn254 = "0.4.0"
ark-bw6-761 = "0.4.0"
ark-cp6-782 = "0.4.0"
ark-curve25519 = "0.4.0"
ark-ed-on-bls12-377 = "0.4.0"
ark-ed-on-bls12-381 = "0.4.0"
ark-ed-on-bls12-381-bandersnatch = "0.4.0"
ark-ed-on-bn254 = "0.4.0"
ark-ed-on-bw6-761 = "0.4.0"
ark-ed-on-cp6-782 = "0.4.0"
ark-ed-on-mnt4-298 = "0.4.0"
ark-ed-on-mnt4-753 = "0.4.0"
ark-ed25519 = "0.4.0"
ark-ff = "0.4.2"
ark-mnt4-298 = "0.4.0"
ark-mnt4-753 = "0.4.0"
ark-mnt6-298 = "0.4.0"
ark-mnt6-753 = "0.4.0"
ark-pallas = "0.4.0"
ark-poly-commit = "0.4.0"
ark-secp256k1 = "0.4.0"
ark-secp256r1 = "0.4.0"
ark-secp384r1 = "0.4.0"
ark-secq256k1 = "0.4.0"
ark-vesta = "0.4.0"
