[package]
name = "rank"
version = "1.0.2"
edition = "2021"
description = "Compute the rank of a matrix."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bls12-381 = "0.4.0"
ark-ff = "0.4.2"
ark-std = "0.4.0"
komodo = { path = "../.." }
rand = "0.8.5"
